# csp-lmc-prototype

./: .gitlab-ci.yml  .pylintrc  .release  Dockerfile  Makefile  Pipfile  README.md  code-analysis.sh  csp-lmc.yml  csp-tangodb.yml  docker-compose.yml  mid-cbf-mcs.yml  setup.cfg  setup.py  start_prototype.sh
.make/: Makefile.mk
csplmc/: addDevicesAndProperties.py  configureAttrProperties.py  configureDevices.py  configurePollingAndEvents.py  devices.json  release.py
csplmc/CbfTestMaster/: CbfTestMaster.py  CbfTestMaster.xmi  README.md
csplmc/CspMaster/: conftest.py  setup.cfg  setup.py
csplmc/CspMaster/CspMaster/: CspMaster.py  CspMaster.xmi  release.py
csplmc/CspMaster/docs/src/: index.rst
csplmc/CspMaster/test/: CspMaster_test.py
csplmc/CspSubarray/: conftest.py  setup.cfg  setup.py
csplmc/CspSubarray/CspSubarray/: CspSubarray.py  CspSubarray.xmi  test_ConfigureScan_basic.json
csplmc/CspSubarray/docs/src/: index.rst
csplmc/CspSubarray/test/: CspSubarray_test.py  CspSubarray_test.py.sav  CspSubarray_two_devices_test.py
csplmc/CspTelState/: README.md
csplmc/CspTelState/CspTelState/: CspTelState.py  CspTelState.xmi
csplmc/commons/: global_enum.py  test_ConfigureScan_band1_sub2.json  test_ConfigureScan_basic.json  test_mvp_band1_sub1.json  test_mvp_basic1.json
csplmc/data/: csplmc_dsconfig.json  midcbf_dsconfig.json
docs/src/: CspMaster.rst  CspSubarray.rst  conf.py  global_enum.rst  index.rst
test-harness/: Makefile
