[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
omit = *__init__.py*,
       csplmc/configureAttrProperties.py,
       csplmc/configureDevices.py,
       *release.py*,
       *conftest*

[tool:pytest]
testpaths = csplmc/CspSubarray csplmc/CspMaster
addopts = --cov=csplmc 
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report=term 
          --cov-report=html 
          --cov-report=xml 
          --junitxml=/build/reports/unit-tests.xml
          -v
filterwarnings =
    ignore::DeprecationWarning

[coverage:report]
show_missing = True

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/src
build-dir = docs/build
all_files = 1
builder = html
