[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = CspMaster
omit = CspMaster/__init__.py

[tool:pytest]
testpaths = test
addopts = --cov=CspMaster 
          --json-report 
          --json-report-file=htmlcov/report.json 
          --cov-report=term 
          --cov-report=html 
          --cov-report=xml 
          -v
filterwarnings =
    ignore::DeprecationWarning

[coverage:report]
show_missing = True
